--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@media all and (display-mode: fullscreen) {
+    overscroll-behavior: none;
+}
+
 body {
     font-family: Arial, sans-serif;
     text-align: center;
